Views, Login and register form

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,7 +21,7 @@ PARA NO TENER Q REPETIRLO-->
             <div class="d-flex flex-column justify-content-center align-items-center">
                 <img src="/img/logo.png" alt="" class="w-50">
                 <h1 class="display-1 my-5 text-camelcase fw-bold">DhalisMarket</h1>
-                <a href="/about" class="btn btn-primary w-25">About</a>
+                <a href="/login" class="btn btn-primary w-25">Login</a>
             </div>
 
         </header>
