--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,3 +3,5 @@
 
 <!--CUSTOM CSS-->
 <link rel="stylesheet" href="/css/main.css">
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
